UI alignments fix in Quests page.

--- a/plugins/liferay-plugins-sdk-6.2.0/themes/LQTheme-theme/docroot/_diffs/css/primary.css
+++ b/plugins/liferay-plugins-sdk-6.2.0/themes/LQTheme-theme/docroot/_diffs/css/primary.css
@@ -139,17 +139,33 @@ p {
    background: #FFF;
 }
 
-.leader_column {
+/*----------Leader page columns -------*/
+.left_leader_column {
    float:left;
    max-width: 150px;
    max-height: 150px;
    background: #FFF; 
 }
-.quests_column {
+.right_quests_column {
    float:right;
    max-width: 290px;
    background: #FFF;
 }
+
+
+/*--------Quests page columns ---------*/
+.left_quests_column {
+   float:left;
+   width: 240px;
+   background: #FFF;
+}
+
+.right_leader_column {
+   float:right;
+   width: 240px;
+   background: #FFF; 
+}
+
 
 
 /*---------- Login page ------------*/
